fix: updates CV link

--- a/layouts/partials/bio.html
+++ b/layouts/partials/bio.html
@@ -21,7 +21,7 @@
     >. <br /><br />
     Here's my
     <a
-      href="https://drive.google.com/file/d/1zUjrJaAkKCEXNxj0PmUqopY4K04QAnby/view"
+      href="https://drive.google.com/file/d/1JDmWRmCgDvNxGjj1kh0qzeMZnE2iSPvZ/view?usp=sharing"
       style="font-weight: lighter"
         >resumé</a> for more details. Feel free to reach me out at my socials if you find something interesting, or just to say hi! 😊
     </div>
